crates/editor-codec-macros/tests/compile_fail/duplicate_grade.stderr
error: duplicate durable grade
 --> tests/compile_fail/duplicate_grade.rs:6:11
  |
6 | #[durable(frozen)]
  |           ^^^^^^
